crates/adoc-cli/tests/snapshots/snapshots_cli__check_claim_basic_clean.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
expression: combined
---
exit-success: true
---stdout---
0 errors, 0 warnings
---stderr---
