crates/adoc-cli/tests/snapshots/snapshots_cli__check_claim_id_duplicate_same_page_flags.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
assertion_line: 119
expression: combined
---
exit-success: false
---stdout---
claim_id_duplicate_same_page.adoc:9:1: error[id.duplicate] duplicate claim id `billing.credits`; previously defined at claim_id_duplicate_same_page.adoc:3:1
  object_id: billing.credits
1 errors, 0 warnings
---stderr---
