crates/adoc-cli/tests/snapshots/snapshots_cli__check_claim_missing_status_flags.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
expression: combined
---
exit-success: false
---stdout---
claim_missing_status.adoc:3:1: error[schema.missing_field] claim is missing required field `status`
  object_id: billing.credits
  help: Claims require non-empty `status`.
1 errors, 0 warnings
---stderr---
