crates/adoc-cli/tests/snapshots/snapshots_cli__check_decision_invalid_status_flags.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
expression: combined
---
exit-success: false
---stdout---
decision_invalid_status.adoc:3:1: error[schema.invalid_status] decision `billing.policy` has invalid status `Accepted`
  object_id: billing.policy
  help: Valid decision statuses are: proposed, accepted.
1 errors, 0 warnings
---stderr---
