crates/adoc-cli/tests/snapshots/snapshots_cli__check_decision_missing_status_flags.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
expression: combined
---
exit-success: false
---stdout---
decision_missing_status.adoc:3:1: error[schema.missing_field] decision is missing required field `status`
  object_id: billing.policy
  help: Decisions require non-empty `status`. Valid decision statuses are: proposed, accepted.
1 errors, 0 warnings
---stderr---
