crates/adoc-cli/tests/snapshots/snapshots_cli__check_glossary_missing_body_flags.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
expression: combined
---
exit-success: false
---stdout---
glossary_missing_body.adoc:3:1: error[schema.missing_field] glossary is missing required body
1 errors, 0 warnings
---stderr---
